# 247_strategy

./: .env.example  .gitignore  AGENTS.md  NOTE.md  PLAN.md  README.md  SPEC.md  TBD.md  docker-compose.yml  fix_ts.sql  pyproject.toml  replace_script.js
analysis/: check_shioaji_live_tx_option_symbol_mismatch.sql  fetch_snapshot_probe.py  normalize_mxf_to_mtx.sql  stock_tick_2330_2026-04-13.json  taiwan_futures_snapshot_20260410T210953_1.txt  taiwan_futures_snapshot_20260410T211024_2.txt  taiwan_options_snapshot_example.json
config/: config.yaml  config.yaml.example  symbols.csv  symbols.csv.example
docker/: init-timescaledb.sql
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  KRONOS_PROBABILITY_INTEGRATION.md  MTX_PROBABILITY_SPEC.md  MTX_REGIME_CANDIDATE_INDICATORS.md  MTX_REGIME_FEATURES.md  MTX_REGIME_SCHEMA.md  MTX_SIGNAL_LOGIC.md  OPERATIONS.md  POLARS_INDICATOR_BACKEND_PLAN.md  README.md  SCHEMA.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: kronos-build.ps1  kronos-build.sh  start-monitor-live.ps1  start-monitor-live.sh  start-monitor-replay.ps1  start-monitor-replay.sh  start-option-power-replay.ps1  start-option-power.ps1  start-option-power.sh  start-runtime.ps1  sync-history.ps1  sync-history.sh
spec/: INDEX.md  note.md
tests/: test_backtest_engine.py  test_cli_backtest.py  test_cli_mtx_probability.py  test_cli_serve_option_power.py  test_contracts.py  test_contracts_symbol_view.py  test_csv_import.py  test_features.py  test_finmind_adapter.py  test_history_sync.py  test_kronos_probability.py  (+21 more)
(+129 files in other folders)
