[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qt-platform"
version = "0.1.0"
description = "Research-first quantitative trading platform for Taiwan index futures."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Quentin Tu" }
]
dependencies = [
  "PyYAML>=6.0,<7.0",
  "polars>=1.0,<2.0",
  "psycopg[binary]>=3.2,<4.0",
]

[project.optional-dependencies]
reports = [
  "quantstats>=0.0.62,<0.1",
]
live = [
  "shioaji>=1.2,<2.0",
]
dev = [
  "pytest>=8.0,<9.0",
]
web = [
  "fastapi>=0.115,<1.0",
  "orjson>=3.10,<4.0",
  "uvicorn>=0.30,<1.0",
]
kronos = [
  "einops>=0.8,<0.9",
  "huggingface_hub>=0.24,<1.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.0,<3.0",
  "safetensors>=0.6,<1.0",
  "torch>=2.0,<3.0",
  "tqdm>=4.0,<5.0",
]

[project.scripts]
qt-platform = "qt_platform.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
